fastsearch/tests/derive/ui/duplicated_attribute.stderr
error: #[fastsearch(facet)] repeated more than one time.
 --> $DIR/duplicated_attribute.rs:7:5
  |
7 | /     #[fastsearch(facet)]
8 | |     #[fastsearch(facet)]
9 | |     country_code: String,
  | |________________________^
